tests/ui/parser/misspelled-keywords/struct.stderr
error: keyword `struct` is written in the wrong case
  --> $DIR/struct.rs:1:1
   |
LL | Struct Foor {
   | ^^^^^^
   |
help: write it in lowercase (notice the capitalization)
   |
LL - Struct Foor {
LL + struct Foor {
   |

error: expected one of `!` or `::`, found `Barr`
  --> $DIR/struct.rs:6:7
   |
LL | stuct Barr;
   |       ^^^^ expected one of `!` or `::`
   |
help: there is a keyword `struct` with a similar name
   |
LL | struct Barr;
   |   +

error: aborting due to 2 previous errors

